# pygalmesh

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  elephant.vtu  justfile  loom.cpp  loom.hpp  loom.i  meson.build  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  wheels.yml
meshmaker/: CMakeLists.txt  domain.hpp  generate.cpp  generate_poly.cpp  generate_poly.hpp  generate_surface_mesh.cpp
pygalmesh/: __about__.py  __init__.py  _cli.py  cli.py  main.py
pygalmesh/_cli/: __init__.py  _inr.py  _remesh_surface.py  _volume_from_surface.py  helpers.py
src/: CMakeLists.txt  domain.cpp  domain.hpp  frentos.i  generate.cpp  generate.hpp  generate_2d.cpp  generate_2d.hpp  generate_from_inr.cpp  generate_from_inr.hpp  generate_from_off.cpp  generate_from_off.hpp  generate_periodic.cpp  generate_periodic.hpp  generate_poly.cpp  generate_poly.hpp  generate_surface_mesh.cpp  generate_surface_mesh.hpp  loom.cpp  loom.hpp  loom.i  meshmaker.i  meson.build  polygon2d.hpp  primitives.hpp  pybind11.cpp  remesh_surface.cpp  remesh_surface.hpp  sizing_field.hpp  version.cpp  version.hpp
test/: helpers.py  test.py  test_2d.py  test_cli.py  test_frentos.py  test_from_array.py  test_inr.py  test_periodic.py  test_pycalmesh.py  test_pygalmesh.py  test_readme.py  test_remesh_surface.py  test_surface_mesh.py  test_volume_from_surface.py  test_volume_mesh.py
test/meshes/: elephant.vtu  lion-head.off  liver.inr  skull_2.9.inr
tests/: helpers.py  test_2d.py  test_from_array.py  test_inr.py  test_periodic.py  test_primitives.py  test_remesh_surface.py  test_surface_mesh.py  test_volume_from_surface.py  test_volume_mesh.py
tests/meshes/: lion-head.vtu  sphere.inr
