cmake_minimum_required(VERSION 3.0)

project(loom)

FIND_PACKAGE(CGAL REQUIRED)
find_package(Boost COMPONENTS thread REQUIRED)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs 2 REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(loom.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(loom.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(loom python loom.i loom.cpp)
SWIG_LINK_LIBRARIES(
  loom
  ${PYTHON_LIBRARIES}
  ${CGAL_LIBRARY}
  ${GMP_LIBRARIES}
  ${MPFR_LIBRARIES}
  ${Boost_LIBRARIES}
  )
