[metadata]
name = pygalmesh
version = 0.6.3
url = https://github.com/nschloe/pygalmesh
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Python frontend to CGAL's 3D mesh generation capabilities
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
setup_requires = pybind11 >= 2.2
install_requires =
    importlib_metadata
    meshio >= 4.0.0, < 5.0.0
    numpy
    pybind11 >= 2.2
python_requires = >=3.5

[options.entry_points]
console_scripts =
    pygalmesh-volume-from-surface = pygalmesh._cli:volume_from_surface
    pygalmesh-remesh-surface = pygalmesh._cli:remesh_surface
    pygalmesh-from-inr = pygalmesh._cli:inr
