[metadata]
name = pygalmesh
version = 0.8.2
url = https://github.com/nschloe/pygalmesh
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Python frontend to CGAL's mesh generation capabilities
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords =
    mathematics
    physics
    engineering
    cgal
    mesh
    mesh generation

[options]
packages = find:
setup_requires = pybind11 >= 2.5
install_requires =
    importlib_metadata;python_version<"3.8"
    meshio >= 4.0.0, < 5.0.0
    numpy
    pybind11 >= 2.5
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pygalmesh-volume-from-surface = pygalmesh._cli:volume_from_surface
    pygalmesh-remesh-surface = pygalmesh._cli:remesh_surface
    pygalmesh-from-inr = pygalmesh._cli:inr
