[metadata]
name = pygalmesh
version = 0.10.7
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Python frontend to CGAL's mesh generation capabilities
url = https://github.com/nschloe/pygalmesh
project_urls =
    Code=https://github.com/nschloe/pygalmesh
    Issues=https://github.com/nschloe/pygalmesh/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords =
    mathematics
    physics
    engineering
    cgal
    mesh
    mesh generation
[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshio >= 4.0.0, < 6.0.0
    numpy
python_requires = >=3.7
[options.entry_points]
console_scripts =
    pygalmesh = pygalmesh._cli:cli
